--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
         "@trpc/client": "^11.1.2",
         "@trpc/server": "^11.1.2",
         "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
         "express": "^5.1.0",
         "zod": "^3.24.3"
     },
